# AI-Email-Operations-Automation-Platform-

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  utils.py
backend/app/api/routes/: approvals.py  cases.py  evals.py  operations.py  webhooks.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/db/repos/: emails.py  evals.py  jobs.py  tenants.py
backend/app/evals/: dataset.py  golden_cases.json  judge.py  service.py
backend/app/evals/prompts/judge/: system.txt  user.txt
backend/app/hitl/: service.py
backend/app/ingest/: gmail_client.py  normalize.py  service.py
backend/app/integrations/: hubspot_client.py  jira_client.py  service.py
backend/app/operator/: queries.py
backend/app/process/: llm.py  routing_policy.py  service.py  thread_policy.py
backend/app/process/prompts/classify_extract/: system.txt  user.txt
backend/app/runners/: gmail_sync.py
backend/app/schemas/: approvals.py  evals.py  llm.py  operator.py
backend/app/sync/: service.py
backend/email_ops_clean.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 0001_init.py
backend/scripts/: reset_local.ps1
backend/tests/: conftest.py  test_api_contracts.py  test_approvals_flow.py  test_ingest_checkpoint_db.py  test_integration_job_flow.py  test_pipeline_actions.py  test_routing_policy.py  test_sync_checkpoint.py  test_thread_policy.py
frontend/: README.md  package.json  (+2 more)
(+23 files in other folders)
