[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-ops-clean"
version = "0.1.0"
description = "Clean bounded AI email automation backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.35",
  "asyncpg>=0.30.0",
  "alembic>=1.13.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "ruff>=0.6.0", "aiosqlite>=0.20.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
